--- a/sol.css
+++ b/sol.css
@@ -461,6 +461,13 @@ input::placeholder {
     min-height: 0;
 }
 
+.col-more .sol-input-container {
+    right: 0;
+}
+
+.col-more .sol-caret-container {
+    display: none;
+}
 .sol-caret-container .sol-caret {
     top: 50%;
     left: 50%;
