--- a/sol.css
+++ b/sol.css
@@ -571,7 +571,7 @@ cursor: pointer;
 	display: none;
 }
 
-.col-more .sol-active .sol-current-selection) {
+.col-more .sol-active .sol-current-selection {
 	display: none;
 }
 
