--- a/sol.css
+++ b/sol.css
@@ -579,11 +579,12 @@ width:100%;
     transition: 0.5s;
 }
 
-.inputprice {
+.inputprice,.inputroom {
     color: #555;
     font-weight: 100;
     margin-left: 20px;
     width: 60px;
+    min-height: 32px;
 }
 
 #tagDelete {
