--- a/sol.css
+++ b/sol.css
@@ -454,11 +454,19 @@ input::placeholder {
 
 .col-more-button {  
     height: 100%;
-width:100%;
+    width:100%;
     background: #795548;
     color: white;
     padding: 0px;
     text-align: center;
+    cursor:pointer;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .col-price input::-webkit-input-placeholder {
