--- a/sol.css
+++ b/sol.css
@@ -76,7 +76,7 @@
 }
 
 .sol-caret-container {
-    width: 15%;
+    width: 100%;
     position: absolute;
     display: inline-block;
     right: 0;
@@ -494,7 +494,7 @@ input::placeholder {
 
 .sol-caret-container .sol-caret {
     top: 50%;
-    left: 50%;
+    left: 90%;
     transform: translate(-50%, -50%);
 }
 
@@ -571,7 +571,7 @@ input::placeholder {
 }
 
 .sol-active .sol-caret {
-    transform: translate(-50%, -50%) rotate(-180deg);
+    transform: rotate(-180deg);
     transition: 0.5s;
 }
 
