--- a/sol.css
+++ b/sol.css
@@ -35,6 +35,12 @@
 }
 
 .searchbar-bg {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     background: #c75453;
 }
 
